--- a/UnoTrip.Api/UnoTrip.Api.csproj
+++ b/UnoTrip.Api/UnoTrip.Api.csproj
@@ -5,7 +5,20 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <InvariantGlobalization>true</InvariantGlobalization>
-        <PublishAot>true</PublishAot>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Riok.Mapperly" Version="3.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\UnoTrip.Application\UnoTrip.Application.csproj" />
+      <ProjectReference Include="..\UnoTrip.Contracts\UnoTrip.Contracts.csproj" />
+      <ProjectReference Include="..\UnoTrip.Infrastructure\UnoTrip.Infrastructure.csproj" />
+    </ItemGroup>
 
 </Project>
