--- a/UnoTrip.Domain/UnoTrip.Domain.csproj
+++ b/UnoTrip.Domain/UnoTrip.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Common\" />
+      <PackageReference Include="ErrorOr" Version="1.10.0" />
     </ItemGroup>
 
 </Project>
