--- a/UnoTrip.Application/UnoTrip.Application.csproj
+++ b/UnoTrip.Application/UnoTrip.Application.csproj
@@ -14,7 +14,9 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+      <PackageReference Include="Riok.Mapperly" Version="3.4.0" />
     </ItemGroup>
 
     <ItemGroup>
