--- a/UnoTrip.Contracts/UnoTrip.Contracts.csproj
+++ b/UnoTrip.Contracts/UnoTrip.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UnoTrip.Domain\UnoTrip.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
