--- a/UnoTrip.Backend/UnoTrip.Api/appsettings.json
+++ b/UnoTrip.Backend/UnoTrip.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=postgres;Username=postgres;Password=123;"
+    "DefaultConnection": "Host=db;Port=5432;Database=postgres;Username=postgres;Password=123;"
   }
 }
