--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,9 @@ services:
         restart: always
         ports:
             - 6379:6379
+        environment:
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
     
     db:
         image: postgres
@@ -15,7 +18,6 @@ services:
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PORT=5432
-            - POSTGRES_HOST=postgres
             - POSTGRES_DB=postgres
             - POSTGRES_PASSWORD=123
         healthcheck:
@@ -30,17 +32,19 @@ services:
         container_name: api
         restart: always
         ports:
-            - 443:443
-        environment:
-            - CONNECTION_STRING=Host=0.0.0.0;Port=5432;Database=postgres;Username=postgres;Password=123;
+            - 8080:8080
         depends_on:
             db:
                 condition: service_healthy
     
     bot:
         build: ./UnoTrip.Bot
-        container_name: client
+        container_name: bot
         restart: always
+        environment:
+            - API_HOST=http://api:8080
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
         depends_on: 
             - redis
             - api
